--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+*.d
+*.pre
+*.p1
+*.lst
+*.sym
+*.obj
+*.o
+*.sdb
+*.obj.dmp
+html/
+nbproject/private/
+nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+funclist
+nbproject/Makefile-*
+disassembly/
+*.map
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/Uploader_Project_P5.sh
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/Uploader_Project_P5_charged.sh
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/css.txt
