--- a/Wipy/FWTOOL-CLI/Version_39/pymakr.conf
+++ b/Wipy/FWTOOL-CLI/Version_39/pymakr.conf
@@ -28,7 +28,9 @@
         "Upload_2_wipy_from_local.py",
         "wify.py",
         "MPYFILES",
-        "miro.responsive.css"
+        "miro.responsive.css",
+        ".vscode",
+        ".pytest_cache"
     ],
     "fast_upload": false,
     "sync_file_types": "py,css,js,mpy,png,html,json,txt,xml",
