--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@ Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/liste_python.txt
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/maker_uploader.pyc
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/prgm.txt
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/txt.txt
-
+Wipy/FWTOOL-CLI/Version_39/.vscode/settings.json
