correction bug enregistrement planing

--- a/Wipy/FWTOOL-CLI/Version_39/pymakr.conf
+++ b/Wipy/FWTOOL-CLI/Version_39/pymakr.conf
@@ -17,20 +17,22 @@
         "main.js",
         ".svg",
         "AiCwebserver.py",
-        "AiCwebserver_CMD.py",
         "commande.py",
         "config.py",
         "main_metlahome.py",
         "mirobot2.py",
         "P4.py",
         "pion.py",
-        "planning.py",
         "Upload_2_wipy_from_local.py",
-        "wify.py",
+        "wifi.py",
         "MPYFILES",
         "miro.responsive.css",
         ".vscode",
-        ".pytest_cache"
+        ".pytest_cache",
+        "planning.py",
+        "wify.py",
+        "AiCwebserver_CMD.py",
+        "es.py"
     ],
     "fast_upload": false,
     "sync_file_types": "py,css,js,mpy,png,html,json,txt,xml",
