--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/maker_uploader.pyc
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/prgm.txt
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/txt.txt
 Wipy/FWTOOL-CLI/Version_39/.vscode/settings.json
+Wipy/FWTOOL-CLI/Version_39/pymakr.conf
