--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/prgm.txt
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/txt.txt
 Wipy/FWTOOL-CLI/Version_39/.vscode/settings.json
 Wipy/FWTOOL-CLI/Version_39/pymakr.conf
+Wipy/FWTOOL-CLI/Version_39/pymakr.conf
