--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,19 @@ Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/txt.txt
 Wipy/FWTOOL-CLI/Version_39/.vscode/settings.json
 Wipy/FWTOOL-CLI/Version_39/pymakr.conf
 Wipy/FWTOOL-CLI/Version_39/pymakr.conf
+PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/Makefile-default.mk
+PIC_18f4431/Moteur_P4/nbproject/Makefile-genesis.properties
+PIC_18f4431/Moteur_P4/nbproject/Makefile-impl.mk
+PIC_18f4431/Moteur_P4/nbproject/Makefile-local-default.mk
+PIC_18f4431/Moteur_P4/nbproject/Makefile-variables.mk
+PIC_18f4431/Moteur_P4/nbproject/Package-default.bash
+PIC_18f4431/Moteur_P4/nbproject/project.xml
+PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/project.xml
+PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/private/private.xml
+PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/project.xml
+PIC_18f4431/Moteur_P4/nbproject/configurations.xml
