git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ PIC_18f4431/Moteur_P4/nbproject/private/private.xml
 PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
 PIC_18f4431/Moteur_P4/nbproject/project.xml
 PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/project.xml
+PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+PIC_18f4431/Moteur_P4/nbproject/configurations.xml
