tentative de remise en état du dossier MPLAB

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
-*.d
-*.pre
-*.p1
-*.lst
-*.sym
-*.obj
-*.o
-*.sdb
-*.obj.dmp
-html/
-nbproject/private/
-nbproject/Package-*.bash
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
-funclist
-nbproject/Makefile-*
-disassembly/
-*.map
+PIC_18f4431/Moteur_P4/*.d
+PIC_18f4431/Moteur_P4/*.pre
+PIC_18f4431/Moteur_P4/*.p1
+PIC_18f4431/Moteur_P4/*.lst
+PIC_18f4431/Moteur_P4/*.sym
+PIC_18f4431/Moteur_P4/*.obj
+PIC_18f4431/Moteur_P4/*.o
+PIC_18f4431/Moteur_P4/*.sdb
+PIC_18f4431/Moteur_P4/*.obj.dmp
+PIC_18f4431/Moteur_P4/html/
+PIC_18f4431/Moteur_P4/nbproject/private/
+PIC_18f4431/Moteur_P4/nbproject/Package-*.bash
+PIC_18f4431/Moteur_P4/build/
+PIC_18f4431/Moteur_P4/nbbuild/
+PIC_18f4431/Moteur_P4/dist/
+PIC_18f4431/Moteur_P4/nbdist/
+PIC_18f4431/Moteur_P4/nbactions.xml
+PIC_18f4431/Moteur_P4/nb-configuration.xml
+PIC_18f4431/Moteur_P4/funclist
+PIC_18f4431/Moteur_P4/nbproject/Makefile-*
+PIC_18f4431/Moteur_P4/disassembly/
+PIC_18f4431/Moteur_P4/*.map
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/Uploader_Project_P5.sh
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/Uploader_Project_P5_charged.sh
 Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/css.txt
@@ -34,22 +34,22 @@ Wipy/FWTOOL-CLI/Version_38/Sources/maker_Uploader/txt.txt
 Wipy/FWTOOL-CLI/Version_39/.vscode/settings.json
 Wipy/FWTOOL-CLI/Version_39/pymakr.conf
 Wipy/FWTOOL-CLI/Version_39/pymakr.conf
-PIC_18f4431/Moteur_P4/nbproject/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/Makefile-default.mk
-PIC_18f4431/Moteur_P4/nbproject/Makefile-genesis.properties
-PIC_18f4431/Moteur_P4/nbproject/Makefile-impl.mk
-PIC_18f4431/Moteur_P4/nbproject/Makefile-local-default.mk
-PIC_18f4431/Moteur_P4/nbproject/Makefile-variables.mk
-PIC_18f4431/Moteur_P4/nbproject/Package-default.bash
-PIC_18f4431/Moteur_P4/nbproject/project.xml
-PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/project.xml
-PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/private/private.xml
-PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/project.xml
-PIC_18f4431/Moteur_P4/nbproject/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/project.xml
-PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
-PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/Makefile-default.mk
+#PIC_18f4431/Moteur_P4/nbproject/Makefile-genesis.properties
+#PIC_18f4431/Moteur_P4/nbproject/Makefile-impl.mk
+#PIC_18f4431/Moteur_P4/nbproject/Makefile-local-default.mk
+#PIC_18f4431/Moteur_P4/nbproject/Makefile-variables.mk
+#PIC_18f4431/Moteur_P4/nbproject/Package-default.bash
+#PIC_18f4431/Moteur_P4/nbproject/project.xml
+#PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/project.xml
+#PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/private/private.xml
+#PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/project.xml
+#PIC_18f4431/Moteur_P4/nbproject/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/project.xml
+#PIC_18f4431/Moteur_P4/nbproject/private/configurations.xml
+#PIC_18f4431/Moteur_P4/nbproject/configurations.xml
